<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_padding"
    tools:context=".brewlogging.BrewLoggingBrewingFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/BigDataLabel"
            android:id="@+id/time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/label_timer_default" />

        <Button
            android:id="@+id/start_time_button"
            android:layout_marginTop="@dimen/vertical_spacing_top"
            android:layout_width="wrap_content"
            android:text="@string/button_title_start_brew"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/to_taste_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_coffe_out"
            android:textAppearance="?textAppearanceHeadline1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <ImageButton
                android:id="@+id/minus_button_coffee_out"
                style="@style/AddSubtractButton"
                android:src="@drawable/ic_subtract" />

            <TextView
                android:id="@+id/label_coffee_out"
                style="@style/BigDataLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_weight="1"
                tools:text="1:2,5" />

            <ImageButton
                android:id="@+id/plus_button_coffee_out"
                style="@style/AddSubtractButton"
                android:src="@drawable/ic_add" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/to_taste_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/button_title_brewing_to_taste"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>