<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_padding">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textAppearance="?textAppearanceHeadline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_coffe_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <ImageButton
                android:id="@+id/minus_button_coffe_in"
                style="@style/AddSubtractButton"
                android:src="@drawable/ic_subtract" />

            <TextView
                android:id="@+id/label_coffee_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_weight="1"
                style="@style/BigDataLabel"
                tools:text="15,7g" />

            <ImageButton
                android:id="@+id/plus_button_coffe_in"
                style="@style/AddSubtractButton"
                android:src="@drawable/ic_add" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/to_brewing_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:textAppearance="?textAppearanceHeadline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_brew_ratio"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <ImageButton
                android:id="@+id/minus_button_brew_ratio"
                style="@style/AddSubtractButton"
                android:src="@drawable/ic_subtract" />

            <TextView
                android:id="@+id/label_brew_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_weight="1"
                style="@style/BigDataLabel"
                tools:text="1:2,5" />

            <ImageButton
                android:id="@+id/plus_button_brew_ratio"
                style="@style/AddSubtractButton"
                android:src="@drawable/ic_add" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/to_brewing_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/button_title_brew_setup_to_brewing"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>